[package]
name = "cognitive_ledger"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"] }
rand = "0.8"
hex = "0.4"
sha2 = "0.10"

# Web server & HTTP Client
axum = "0.6"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
