[project]
name = "cognitive-ledger"
version = "0.2.0"
description = "A deterministic AI-native blockchain node prototype with hardened localnet defaults."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.22.0",
  "rich>=12.0.0",
  "pydantic>=2.0.0",
  "cryptography>=36.0.0",
  "requests>=2.27.0",
]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
testpaths = ["."]

[tool.ruff]
line-length = 100
